--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   qr_code_scanner: ^0.7.0
   cupertino_icons: ^1.0.2
   intl: ^0.17.0
+  provider: any
 
 dev_dependencies:
   flutter_test:
