--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   intl: ^0.17.0
   provider: any
+  flutter_svg: any
 
 dev_dependencies:
   flutter_test:
