--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,11 @@ dependencies:
   country_code_picker: ^2.0.2
   device_info_plus: ^3.2.3
   shared_preferences: ^2.0.13
-  qr_code_scanner: ^0.7.0
+  qr_code_scanner: 
+    git:
+        url: https://github.com/X-SLAYER/qr_code_scanner.git
+        ref: flutter-beta
+
   cupertino_icons: ^1.0.2
   intl: ^0.17.0
   provider: any
